--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,33 +1,3 @@
-<div class="row">
-  <div class="col">
-    <h1 class="text-white bg-dark">Programa PIL</h1>
-  </div>
-</div>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">PIL</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">¿Quienes somos?</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Iniciar Sesión</a>
-      </li>
-
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
-  </div>
-</nav>
+<app-spinner></app-spinner>
+<router-outlet>
+</router-outlet>
