--- a/src/app/users/registration-page/registration-page.component.html
+++ b/src/app/users/registration-page/registration-page.component.html
@@ -1,58 +1,78 @@
-<div class="fondo" >
-  <h1 class="titulo">Bievenidos a nuestra Billetera Digital</h1>
+<div class="box">
   <h2 class="titulo">Registrate</h2>
-  <img class="imagen-uno" [src]="fullImagePath" alt="">
-  <img class="imagen-dos" [src]="fullImagePathDos" alt="">
-  <section class="container">
-    <form [formGroup]="myForm" class="example-form" (ngSubmit)="register(myForm.value)" >
-      <mat-form-field class="full-width-input">
-       <mat-label class="label-uno">Correo Electronico*</mat-label>
-        <input type="email"
+</div>
+<div class="box-left">
+  <img class="imagen-uno" [src]="fullImagePath" alt="" />
+</div>
+<div class="box-right">
+  <img class="imagen-dos" [src]="fullImagePathDos" alt="" />
+</div>
+<section class="container">
+  <form
+    [formGroup]="myForm"
+    class="example-form"
+    (ngSubmit)="register(myForm.value)"
+  >
+    <mat-form-field class="full-width-input">
+      <mat-label class="label-uno">Correo Electronico*</mat-label>
+      <input
+        type="email"
         formControlName="email"
         pattern="^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$"
         minlength="5"
         maxlength="25"
         matInput
-
         class="input-name"
-        />
-     </mat-form-field>
-      <mat-error class="error">{{ nombreErrores() }}</mat-error>
-      <mat-form-field class="full-width-input">
-        <mat-label class="label-uno">Contraseña*</mat-label>
-        <input
+      />
+    </mat-form-field>
+    <mat-error class="error">{{ commonForm.emailErrores() }}</mat-error>
+    <mat-form-field class="full-width-input">
+      <mat-label class="label-uno">Contraseña*</mat-label>
+      <input
         formControlName="password"
         pattern="^[0-9a-zA-ZÀ-ÿ\s]{1,40}$"
         minlength="8"
         maxlength="15"
         [type]="hide ? 'text' : 'password'"
         matInput
-        />
-        </mat-form-field>
-       <button class="button-eye" matSuffix (click) ="hide = !hide">
-         <mat-icon>{{hide ? "visibility_off" : "visibility"}}</mat-icon>
-       </button>
-       <mat-error class="error" >{{ passwordErrores() }}</mat-error>
-       <div class="label-tres">
+      />
+    </mat-form-field>
+    <button type="button" class="button-eye" matSuffix (click)="hide = !hide">
+      <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
+    </button>
+    <mat-error class="error">{{ commonForm.passwordErrores() }}</mat-error>
+    <div class="label-tres">
       <label class="label-uno">Foto del frente y reverso del DNI*</label>
-      </div>
-      <div class="button-foto">
-        <input type="file" name="mi-archivo" id="mi-archivo" formControlName="file" (change) = "capturarFile($event)" required>
-      </div>
-      <label for="mi-archivo" >
-        <span>Subir</span>
-      </label>
-      <div *ngIf="previsualizacion">
-        <img width="150px" [src]="previsualizacion" alt="" class="img-default">
-      </div>
-      <div>
-        <p class="opción"></p>
-      </div>
-      <button type="submit" class="button-registro" [disabled] = "myForm.invalid" mat-stroked-button disabled>Confirmar</button>
-      <div class="button-inicioSesion">
-        <button [routerLink]="['/login']">Iniciar Sesion</button>
-      </div>
-    </form>
-  </section>
-</div>
+    </div>
+    <div class="button-foto">
+      <input
+        type="file"
+        name="mi-archivo"
+        id="mi-archivo"
+        formControlName="file"
+        (change)="capturarFile($event)"
+        required
+      />
+    </div>
+    <label for="mi-archivo">
+      <span>Subir</span>
+    </label>
+    <div *ngIf="previsualizacion">
+      <img width="150px" [src]="previsualizacion" alt="" class="img-default" />
+    </div>
 
+    <div class="button-registro">
+      <button
+        type="submit"
+        [disabled]="myForm.invalid"
+        mat-stroked-button
+        disabled
+      >
+        Confirmar
+      </button>
+    </div>
+    <div class="button-inicioSesion">
+      <button type="button" [routerLink]="['/login']">Iniciar Sesion</button>
+    </div>
+  </form>
+</section>
