--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -1,5 +1,7 @@
 <header class="header container-fluid">
      <a class="logo" [routerLink]="['']" >PIL MONEY<img [src]="imgIcon"></a>
+     <a class="btn-aboutus" [routerLink]="['/aboutus']">Nosotros</a>
+     <a class="btn-contact" [routerLink]="['/contact']">Contactanos</a>
      <a class="btn-register" [routerLink]="['/register']">Registro</a>
      <a class="btn-login" [routerLink]="['/login']">Inicio Sesion</a>
 </header>
