--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -1,7 +1,8 @@
 
 <app-header></app-header>
 <section class="fondo box">
-  <h1 class="titulo">Bievenidos a nuestra Billetera Digital</h1>
+  <h1 class="titulo">Bienvenido a PIL MONEY, nuestra Billetera Digital</h1>
+  <h3 class="subtitulo">Operá de forma cómoda y tené toda la información de tu billetera al día</h3>
   <img class="imgFondo" [src]="imgFondo" alt="">
 </section>
 <app-footer></app-footer>
