--- a/src/app/landing/about-us/about-us.component.css
+++ b/src/app/landing/about-us/about-us.component.css
@@ -1,55 +1,65 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900");
 
-.imgFondo{
-    width: 500px;
-    position: relative;
-    filter: brightness(1.1);
-    mix-blend-mode: multiply;
-    height: auto;
-    bottom: 30px;
-    margin-top: 100px;
-    margin-right: 50px;
-  }
 
-  .imgFondo:hover{
-    -webkit-transform:scale(1.1);
-    transform:scale(1.1);
-    transition: all 0.5s ease 0.5s;
-  }
 
-  
-  .titulo {
-    text-align: center;
-    margin-top: 150px;
-    color: #4d2c91;
-    margin-bottom: -100px;
-}
-
-    .box-front {
+  .box-front {
     background-color: #e8eaf6;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     }
-
-    .box-left{
-        background-color: #e8eaf6;
-        text-align: left;
-        display: flex;
-        align-items: left;
-        justify-content: left;
+  
+  .titulo {
+    text-align: center;
+    margin-top: 150px;
+    color: #4d2c91;
+    margin-bottom: -100px;
     }
 
-    .parrafo {
-        text-align: left;
-        text-align-last: left;
-    }
 
-    .box-right {
-        display: flex;
-        justify-content: flex-end;
-        background-color: #e8eaf6;
+    .imgFondo{
+        width: 500px;
+        position: right;
+        filter: brightness(1.1);
+        mix-blend-mode: multiply;
+        height: auto;
+        bottom: 30px;
         margin-top: 100px;
+        margin-right: 50px;
+        margin-left: 350px;
+        margin-bottom: 50px;
+      }
+    
+      .imgFondo:hover{
+        -webkit-transform:scale(1.1);
+        transform:scale(1.1);
+        transition: all 0.5s ease 0.5s;
+      }
+
+      .box-left{
+        background-color: #e8eaf6;
+        justify-content: center;
+        display: flex;
+        align-items: center;
+        margin: 0 auto;
+        width: 90%;
+        margin-top: 50px;
     }
+
+    .conteiner-about {
+        padding: 0;
+        margin: 0;
+        margin-top: 50px;
+    }
+
+    .conteiner-texto {
+        flex-flow: column;
+        justify-content: center;
+        align-items: left;
+        padding: 50px;
+        width: 50%;
+        font-size: 18px;
+    }
+
 
