menú hamburguesa y responsive about us

--- a/src/app/landing/about-us/about-us.component.html
+++ b/src/app/landing/about-us/about-us.component.html
@@ -6,7 +6,7 @@
 
 
 
-<section class="box-left">
+<section class="box-left container-fluid">
     <img class="imgFondo" [src]="imgFondo" alt="">
     <section class="conteiner-about">
         <section class="conteiner-texto">
