--- a/src/app/landing/about-us/about-us.component.css
+++ b/src/app/landing/about-us/about-us.component.css
@@ -27,7 +27,7 @@
         bottom: 30px;
         margin-top: 100px;
         margin-right: 50px;
-        margin-left: 350px;
+        margin-left: 300px;
         margin-bottom: 50px;
       }
     
@@ -48,18 +48,46 @@
     }
 
     .conteiner-about {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-flow: column;
         padding: 0;
         margin: 0;
         margin-top: 50px;
+        margin-left: 300px;
     }
 
     .conteiner-texto {
+        display: flex;
         flex-flow: column;
         justify-content: center;
-        align-items: left;
+        align-items: center;
         padding: 50px;
-        width: 50%;
+        padding-right: 200px;
+        width: 100%;
         font-size: 18px;
+        margin-right: 300px;
     }
 
+    @media screen and (max-width: 1250px) {
+        .box-left .imgFondo {
+          width: 400px;
+        }  
+    }
+
+    @media screen and (max-width: 1035px) {
+        .box-left .imgFondo {
+          align-items: center;
+          justify-content: center;
+          margin-bottom: 300px;
+          margin-left: 1000px;
+        }
+
+        .conteiner-about {
+          padding-top: 500px;
+          padding-right: 1000px;
+        }
+      
+    }
 
