--- a/src/app/landing/about-us/about-us.component.html
+++ b/src/app/landing/about-us/about-us.component.html
@@ -1,21 +1,30 @@
-<app-header></app-header>
+<app-header [templateDos]="headerComponentAbout"></app-header>
 
 <div class="box-front">
-<h1 class="titulo">Somos el Equipo 4A del programa PIL</h1>
+  <h1 class="titulo">Somos el Equipo 4A del programa PIL</h1>
 </div>
 
-
-
 <section class="box-left container-fluid">
-    <img class="imgFondo" [src]="imgFondo" alt="">
-    <section class="conteiner-about">
-        <section class="conteiner-texto">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at dictum enim, vitae dignissim ex. Mauris accumsan ligula non elit molestie imperdiet. Curabitur nec purus tellus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nunc dui, dictum at suscipit ac, rhoncus sit amet est. Curabitur aliquet dui arcu, eget ullamcorper metus pulvinar quis. Morbi eu dolor risus. Proin sodales velit ut eros condimentum efficitur.</p>
-        </section>
+  <img class="imgFondo" [src]="imgFondo" alt="" />
+  <section class="conteiner-about">
+    <section class="conteiner-texto">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at dictum
+        enim, vitae dignissim ex. Mauris accumsan ligula non elit molestie
+        imperdiet. Curabitur nec purus tellus. Lorem ipsum dolor sit amet,
+        consectetur adipiscing elit. Donec nunc dui, dictum at suscipit ac,
+        rhoncus sit amet est. Curabitur aliquet dui arcu, eget ullamcorper metus
+        pulvinar quis. Morbi eu dolor risus. Proin sodales velit ut eros
+        condimentum efficitur.
+      </p>
     </section>
-    </section>
-
-    
-
+  </section>
+</section>
 
 <app-footer></app-footer>
+
+<ng-template #headerComponentAbout>
+  <a (click)="redirectToAbout()" class="logo"
+    >PIL MONEY<img [src]="imgIcon"
+  /></a>
+</ng-template>
