--- a/src/app/landing/contact/contact.component.html
+++ b/src/app/landing/contact/contact.component.html
@@ -1,46 +1,110 @@
-<app-header></app-header>
+<app-header [templateTres]="headerComponentContact"></app-header>
 
 <div class="box-front">
-<h1 class="titulo">Podes contactarte por medio de las siguientes líneas</h1>
+  <h1 class="titulo">Podes contactarte por medio de las siguientes líneas</h1>
 </div>
 
 <section class="box-main">
-<div class="box-left">
+  <div class="box-left">
     <span class="texto1">
-<p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-phone" width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="#4d2c91" fill="none" stroke-linecap="round" stroke-linejoin="round">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-    <path d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2" />
-  </svg>Teléfono: +54 351234567  
-</p>
-<br>
-<p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-mail-forward" width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="#4d2c91" fill="none" stroke-linecap="round" stroke-linejoin="round">
-    <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-    <path d="M12 18h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5" />
-    <path d="M3 6l9 6l9 -6" />
-    <path d="M15 18h6" />
-    <path d="M18 15l3 3l-3 3" />
-  </svg>E-mail: Pilmoney@gmail.com</p>
-</span>
-</div>
-
-<div class="box-img">
-    <img class="imgfondo" [src]="imgFondo" alt="">
-</div>
-
-<div class="box-right">
-    <span class="texto2">
-    <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="#4d2c91" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-      </svg>Facebook: PIL Money</p>
-      <br>
-      <p><svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-github" width="32" height="32" viewBox="0 0 24 24" stroke-width="2" stroke="#4d2c91" fill="none" stroke-linecap="round" stroke-linejoin="round">
-        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-        <path d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
-      </svg>Github: PIL Money 4A</p>
+      <p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-phone"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="#4d2c91"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M5 4h4l2 5l-2.5 1.5a11 11 0 0 0 5 5l1.5 -2.5l5 2v4a2 2 0 0 1 -2 2a16 16 0 0 1 -15 -15a2 2 0 0 1 2 -2"
+          /></svg
+        >Teléfono: +54 351234567
+      </p>
+      <br />
+      <p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-mail-forward"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="#4d2c91"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M12 18h-7a2 2 0 0 1 -2 -2v-10a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v7.5"
+          />
+          <path d="M3 6l9 6l9 -6" />
+          <path d="M15 18h6" />
+          <path d="M18 15l3 3l-3 3" /></svg
+        >E-mail: Pilmoney@gmail.com
+      </p>
     </span>
-</div>
+  </div>
+
+  <div class="box-img">
+    <img class="imgfondo" [src]="imgFondo" alt="" />
+  </div>
+
+  <div class="box-right">
+    <span class="texto2">
+      <p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-brand-facebook"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="#4d2c91"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3"
+          /></svg
+        >Facebook: PIL Money
+      </p>
+      <br />
+      <p>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-brand-github"
+          width="32"
+          height="32"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="#4d2c91"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+          <path
+            d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
+          /></svg
+        >Github: PIL Money 4A
+      </p>
+    </span>
+  </div>
 </section>
 
-
 <app-footer></app-footer>
+
+<ng-template #headerComponentContact>
+  <a (click)="redirectToContact()" class="logo"
+    >PIL MONEY<img [src]="imgIcon"
+  /></a>
+</ng-template>
