--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -1,52 +1,51 @@
 <header class="header container-fluid">
+  <ng-container
+    class="nav-brand"
+    [ngTemplateOutlet]="template || templateDos || templateTres"
+  ></ng-container>
 
-     <a class="logo"
-    >PIL MONEY<img [src]="imgIcon"
-  /></a>
-     
-     <nav class="navbar navbar-expand-lg">
-          <div class="container-fluid button">
-            <button
-              class="navbar-toggler custom-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarTogglerDemo02"
-              aria-controls="navbarTogglerDemo02"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
+  <nav class="navbar navbar-expand-lg">
+    <div class="container-fluid button">
+      <button
+        class="navbar-toggler custom-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarTogglerDemo02"
+        aria-controls="navbarTogglerDemo02"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link text-white" [routerLink]="['/landing']"
+              >Inicio</a
             >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['/landing']"
-                    >Inicio</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['/aboutus']"
-                    >Nosotros</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['/contact']"
-                    >Contactanos</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['/register']"
-                    >Registrate</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-white" [routerLink]="['/login']"
-                    >Ingresar</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" [routerLink]="['/aboutus']"
+              >Nosotros</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" [routerLink]="['/contact']"
+              >Contactanos</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" [routerLink]="['/register']"
+              >Registrate</a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" [routerLink]="['/login']"
+              >Ingresar</a
+            >
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
-
