--- a/src/app/landing/landing-page/landing-page.component.css
+++ b/src/app/landing/landing-page/landing-page.component.css
@@ -2,7 +2,7 @@
 
 h1{
   text-align: center;
-  margin-top: 233.3px;
+  margin-top: 203.3px;
   color: #4d2c91;
 }
 
@@ -33,5 +33,25 @@ h1{
 .subtitulo {
   color: #397dd6;
   margin-top: 25px;
+  text-align: center;
 }
 
+.logo{
+  margin: 25px;
+  color:white;
+  text-align: 20px;
+  cursor: pointer;
+  font-size: 30px;
+  text-decoration: none;
+  padding-right: 22px;
+  position: relative;
+
+
+}
+
+img{
+  width: 35px;
+  position: relative;
+  left: 15px;
+  bottom: 2px;
+}
