--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -1,8 +1,15 @@
-
-<app-header></app-header>
+<app-header [template]="headerComponentLanding"></app-header>
 <section class="fondo box">
-  <h1 class="titulo">Bienvenido a PIL MONEY, nuestra Billetera Digital</h1>
-  <h3 class="subtitulo">Operá de forma cómoda y tené toda la información de tu billetera al día</h3>
-  <img class="imgFondo" [src]="imgFondo" alt="">
+  <h1 class="titulo">Bienvenido a nuestra Billetera Digital PIL MONEY</h1>
+  <h3 class="subtitulo">
+    Operá de forma cómoda y tené toda la información al día
+  </h3>
+  <img class="imgFondo" [src]="imgFondo" alt="" />
 </section>
 <app-footer></app-footer>
+
+<ng-template #headerComponentLanding>
+  <a (click)="redirectToLanding()" class="logo"
+    >PIL MONEY<img [src]="imgIcon"
+  /></a>
+</ng-template>
