Refactorize codigo e hice una directiva y un servicio

--- a/src/app/landing/about-us/about-us.component.html
+++ b/src/app/landing/about-us/about-us.component.html
@@ -24,7 +24,9 @@
 <app-footer></app-footer>
 
 <ng-template #headerComponentAbout>
-  <a (click)="redirectToAbout()" class="logo"
-    >PIL MONEY<img [src]="imgIcon"
+  <a appHeader (click)="redirectToAbout()" class="logo"
+    >PIL MONEY<img
+      src="/assets/imagenes/money-check-alt-solid.svg"
+      [ngStyle]="styles.logo"
   /></a>
 </ng-template>
