--- a/src/app/landing/header/header.component.css
+++ b/src/app/landing/header/header.component.css
@@ -9,25 +9,6 @@
 
 }
 
-/* .logo{
-  margin: 25px;
-  color:white;
-  text-align: 20px;
-  cursor: pointer;
-  font-size: 30px;
-  text-decoration: none;
-  padding-right: 22px;
-  position: relative;
-
-}
-
-img{
-  width: 35px;
-  position: relative;
-  left: 15px;
-  bottom: 3px;
-} */
-
 .navbar-toggler{
   border: none;
   color: white;
@@ -48,6 +29,7 @@ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32
 
 .navbar-collapse {
   margin-top: 10px;
+
 }
 
 nav {
@@ -62,6 +44,7 @@ li {
 
 .button {
   padding-top: 42px;
+
 }
 
 @media screen and (min-width:992px) {
@@ -71,4 +54,8 @@ li {
   a{
     margin-right: 20px;
   }
+}
+
+@media screen and (max-width: 992px){
+
 }
