--- a/src/app/landing/header/header.component.html
+++ b/src/app/landing/header/header.component.html
@@ -2,7 +2,8 @@
   <ng-container
     class="nav-brand"
     [ngTemplateOutlet]="template || templateDos || templateTres"
-  ></ng-container>
+  >
+  </ng-container>
 
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid button">
