--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -9,7 +9,9 @@
 <app-footer></app-footer>
 
 <ng-template #headerComponentLanding>
-  <a (click)="redirectToLanding()" class="logo"
-    >PIL MONEY<img [src]="imgIcon"
+  <a appHeader (click)="redirectToLanding()" class="logo"
+    >PIL MONEY<img
+      src="/assets/imagenes/money-check-alt-solid.svg"
+      [ngStyle]="styles.logo"
   /></a>
 </ng-template>
