--- a/src/app/landing/landing-page/landing-page.component.html
+++ b/src/app/landing/landing-page/landing-page.component.html
@@ -10,8 +10,6 @@
 
 <ng-template #headerComponentLanding>
   <a appHeader (click)="redirectToLanding()" class="logo"
-    >PIL MONEY<img
-      src="/assets/imagenes/money-check-alt-solid.svg"
-      [ngStyle]="styles.logo"
+    >PIL MONEY<img appLogo src="/assets/imagenes/money-check-alt-solid.svg"
   /></a>
 </ng-template>
