--- a/src/app/users/login-page/login-page.component.css
+++ b/src/app/users/login-page/login-page.component.css
@@ -5,13 +5,13 @@ h2{
    text-align: center;
    padding: 73.3px;
    color: #4d2c91;
-  position: relative;
-  top: 80px;
+   position: relative;
+   top: 60px;
 }
 
 .imagen-uno{
   position: relative;
-  bottom: -150px;
+  bottom: -160px;
   filter: brightness(1.1);
   mix-blend-mode: multiply;
 }
@@ -20,19 +20,20 @@ h2{
   width: 450px;
   position: relative;
   top: -110px;
+  right: 30px;
   filter: brightness(1.1);
   mix-blend-mode: multiply;
 }
 
 .imagen-dos:hover{
-  -webkit-transform:scale(1.3);
-  transform:scale(1.3);
+  -webkit-transform:scale(1.1);
+  transform:scale(1.1);
   transition: all 0.5s ease 0.5s
 }
 
 .imagen-uno:hover{
-  -webkit-transform:scale(1.2);
-  transform:scale(1.2);
+  -webkit-transform:scale(1.1);
+  transform:scale(1.1);
   transition: all 0.5s ease 0.5s;
 }
 
@@ -48,7 +49,7 @@ h2{
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   max-width: 600px;
   position: relative;
-  margin-top: -400px;
+  margin-top: -450px;
 
 }
 
@@ -135,9 +136,41 @@ input{
   background-color: #e8eaf6;
 }
 
+a img{
+  position: relative;
+  top: 60px;
+  right: 600px;
+  cursor: pointer
+}
+
+
 @media screen and (max-width: 1520px){
+  .box-left img{
+    width: 350px;
+    position: relative;
+    top: 150px
+  }
+  .box-right img{
+    width: 350px;
+    top: -55px
+  }
+  .container{
+    margin-top: -300px;
+  }
+
+  a img {
+    right: 550px;
+  }
+}
+
+@media screen and (max-width: 1375px) {
   .box-left, .box-right{
     visibility: hidden;
+  }
+  a img{
+    right: 0px;
+    align-items: center;
+    justify-content: center;
   }
 }
 
@@ -145,4 +178,7 @@ input{
   .container{
     max-width: 400px;
   }
+
 }
+
+
