--- a/src/app/users/registration-page/registration-page.component.html
+++ b/src/app/users/registration-page/registration-page.component.html
@@ -1,4 +1,7 @@
 <div class="box">
+  <a (click)="commonForm.goBack()">
+    <img src="/assets/imagenes/arrow-left-solid.svg" alt="" />
+  </a>
   <h2 class="titulo">Registrate</h2>
 </div>
 <div class="box-left">
