--- a/src/app/landing/contact/contact.component.css
+++ b/src/app/landing/contact/contact.component.css
@@ -26,13 +26,13 @@
     ;
       }
 
-      .imgfondo:hover{
+    .imgfondo:hover{
         -webkit-transform:scale(1.1);
         transform:scale(1.1);
         transition: all 0.5s ease 0.5s;
       }
 
-       .box-img{
+    .box-img{
         background-color: #e8eaf6;
         display: flex;
         flex-flow: row;
@@ -45,13 +45,13 @@
         right: 50px;
      }
 
-      .box-main {
+    .box-main {
           background-color: #e8eaf6;
           display: flex;
           flex-flow: row;
       }
 
-      .box-left{
+    .box-left{
         display: flex;
         justify-content: flex-start;
         background-color: #e8eaf6;
@@ -63,7 +63,7 @@
 
       }
 
-      .box-right{
+    .box-right{
         display: flex;
         justify-content: flex-end;
         background-color: #e8eaf6;
@@ -73,11 +73,11 @@
         margin-left: 100px;
       }
 
-      .texto1 {
+    .texto {
           font-size: 20px;
       }
 
-      .texto2 {
+    .texto2 {
         font-size: 20px;
     }
 
@@ -90,8 +90,6 @@
       text-decoration: none;
       padding-right: 22px;
       position: relative;
-
-
     }
 
     img{
@@ -99,4 +97,79 @@
       position: relative;
       left: 15px;
       bottom: 2px;
+    }
+
+    .icono-izq {
+      position: relative;
+      left: -10px;
+    }
+
+    .icono-der {
+      position: relative;
+      left: -10px;
+    }
+
+    .caja {
+      display: none;
+    }
+
+    @media only screen and (min-width:1025px) and (max-width: 1366px) {
+      .caja {
+        display: block;
+      }
+      .texto {
+        display: block;
+        font-size: 20px;
+      }
+      .parrafo {
+        display: block;
+      }
+      .imgfondo:hover{
+        -webkit-transform:scale(1.0);
+        transform:scale(1.0);
+        transition: all 0.0s ease 0.0s;
+      }
+      .box-img .imgfondo {
+        width: 400px;
+      }
+      .box-left {
+        flex-wrap: wrap;
+        margin-left: 100px;
+        margin-top: 200px;
+      }
+      .box-right {
+        display: none;
+      }
+    }
+    
+    @media only screen and (max-width: 1024px) {
+      .caja {
+        display: block;
+      }
+      .texto {
+        display: block;
+        font-size: 16px;
+      }
+      .parrafo {
+        display: block;
+      }
+      .imgfondo:hover{
+        -webkit-transform:scale(1.0);
+        transform:scale(1.0);
+        transition: all 0.0s ease 0.0s;
+      }
+      .box-img .imgfondo {
+        width: 300px;
+      }
+      .box-left {
+        flex-wrap: wrap;
+        margin-left: 100px;
+        margin-top: 200px;
+      }
+      .box-right {
+        display: none;
+      }
+      .titulo {
+        font-size: calc(1rem + 1.5vw);
+      }
     }
