--- a/src/app/users/registration-page/registration-page.component.html
+++ b/src/app/users/registration-page/registration-page.component.html
@@ -6,6 +6,7 @@
 </div>
 <div class="box-left">
   <img class="imagen-uno" [src]="fullImagePath" alt="" />
+  <img class="imagen" [src]="fullImagePathDos" alt="" />
 </div>
 <div class="box-right">
   <img class="imagen-dos" [src]="fullImagePathDos" alt="" />
