--- a/src/app/users/login-page/login-page.component.css
+++ b/src/app/users/login-page/login-page.component.css
@@ -1,22 +1,21 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900");
 
-
-h2{
-   text-align: center;
-   padding: 73.3px;
-   color: #4d2c91;
-   position: relative;
-   top: 60px;
+h2 {
+  text-align: center;
+  padding: 73.3px;
+  color: #4d2c91;
+  position: relative;
+  top: 60px;
 }
 
-.imagen-uno{
+.imagen-uno {
   position: relative;
   bottom: -160px;
   filter: brightness(1.1);
   mix-blend-mode: multiply;
 }
 
- .imagen-dos{
+.imagen-dos {
   width: 450px;
   position: relative;
   top: -110px;
@@ -25,19 +24,24 @@ h2{
   mix-blend-mode: multiply;
 }
 
-.imagen-dos:hover{
-  -webkit-transform:scale(1.1);
-  transform:scale(1.1);
-  transition: all 0.5s ease 0.5s
-}
-
-.imagen-uno:hover{
-  -webkit-transform:scale(1.1);
-  transform:scale(1.1);
+.imagen-dos:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
   transition: all 0.5s ease 0.5s;
 }
 
-.container{
+.imagen-uno:hover {
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
+  transition: all 0.5s ease 0.5s;
+}
+
+.caja{
+  display: flex;
+  flex-direction: column;
+}
+
+.container {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -50,25 +54,25 @@ h2{
   max-width: 600px;
   position: relative;
   margin-top: -450px;
-
 }
 
-input{
+
+input {
   border-top: none;
   border-left: none;
   border-right: none;
   outline: none;
-  background-color:aliceblue;
+  background-color: aliceblue;
   font-weight: 500;
 }
 
-.label-uno{
+.label-uno {
   font-weight: 500;
   color: #7e57c2;
 }
 
-.button-eye{
-  background-color:transparent;
+.button-eye {
+  background-color: transparent;
   border: none;
   outline: none;
   position: relative;
@@ -77,19 +81,18 @@ input{
   left: -25px;
 }
 
-.error{
+.error {
   font-weight: 500;
   margin-left: 30px;
 }
 
-
-.full-width-input{
+.full-width-input {
   margin-top: 30px;
   margin-left: 30px;
   font-weight: 600;
 }
 
-.button-confirmar{
+.button-confirmar {
   position: relative;
   left: 40px;
   bottom: 30px;
@@ -107,54 +110,56 @@ input{
   color: rgb(247, 241, 241);
 }
 
-.button-confirmar:hover{
+.button-confirmar:hover {
   background-color: #4d2c91;
 }
 
-.button-confirmar:disabled{
+.button-confirmar:disabled {
   background-color: #c7a4ff;
   color: white;
 }
 
-.box{
+.box {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
   justify-content: center;
 }
 
-.box-left{
+.box-left {
   display: flex;
   justify-content: flex-start;
   background-color: #e8eaf6;
-
 }
 
-.box-right{
+.box-right {
   display: flex;
   justify-content: flex-end;
   background-color: #e8eaf6;
 }
 
-a img{
+a img {
   position: relative;
   top: 60px;
   right: 600px;
-  cursor: pointer
+  cursor: pointer;
 }
 
+.imagen {
+  display: none;
+}
 
-@media screen and (max-width: 1520px){
-  .box-left img{
+@media screen and (max-width: 1520px) {
+  .box-left img {
     width: 350px;
     position: relative;
-    top: 150px
+    top: 150px;
   }
-  .box-right img{
+  .box-right img {
     width: 350px;
-    top: -55px
+    top: -55px;
   }
-  .container{
+  .container {
     margin-top: -300px;
   }
 
@@ -163,22 +168,56 @@ a img{
   }
 }
 
+
 @media screen and (max-width: 1375px) {
-  .box-left, .box-right{
-    visibility: hidden;
-  }
-  a img{
-    right: 0px;
-    align-items: center;
-    justify-content: center;
-  }
+a img{
+  right: 350px;
 }
 
-@media screen and (max-width: 610px){
-  .container{
+  .box-right {
+    display: none;
+  }
+
+  .imagen{
+    display: block;
+    filter: brightness(1.1);
+  mix-blend-mode: multiply;
+  }
+
+  .box-left{
+    flex-direction: column;
+    margin-left: 100px;
+  }
+
+.container{
+  position: relative;
+  left: 200px;
+  top: 20px;
+}
+}
+
+@media screen and (max-width: 1119px) {
+
+  a img{
+    right: 250px;
+  }
+  .container {
     max-width: 400px;
   }
 
 }
 
+@media screen and (max-width: 977px){
+  .box-left{
+    visibility: hidden;
+  }
+   .container{
+     left: 0;
+   }
+   a img {
+    right: 0px;
+    align-items: center;
+    justify-content: center;
+  }
+}
 
