--- a/src/app/landing/about-us/about-us.component.css
+++ b/src/app/landing/about-us/about-us.component.css
@@ -52,6 +52,8 @@
 }
 
 .acercade-texto {
+  color: #397dd6;
+  font-size: 20px;
   flex-flow: column;
   justify-content: flex-end;
   align-items: flex-end;
@@ -98,13 +100,14 @@
       margin: 15px 0;
   }
   .acercade-texto {
+      text-align: center;
       align-items: center;
       justify-content: center;
       width: 100%;
       padding: 25px;
-      margin-top: -10px;
+      margin-top: -100px;
       margin-right: 700px;
-      margin-bottom: 20px;
+      margin-bottom: 50px;
   }
 
   .acercade-img .imgFondo {
