--- a/src/app/landing/about-us/about-us.component.html
+++ b/src/app/landing/about-us/about-us.component.html
@@ -1,6 +1,6 @@
 <app-header [templateDos]="headerComponentAbout"></app-header>
 <div class="box-front">
-  <h1 class="titulo">Somos el Equipo 4A del programa PIL</h1>
+  <h1 class="titulo">Equipo 4A - Programa PIL</h1>
 </div>
 <main class="main-acercade">
   <div class="container-acercade">
@@ -9,13 +9,11 @@
     </div>
     <div class="acercade-texto">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc at dictum
-        enim, vitae dignissim ex. Mauris accumsan ligula non elit molestie
-        imperdiet. Curabitur nec purus tellus. Lorem ipsum dolor sit amet,
-        consectetur adipiscing elit. Donec nunc dui, dictum at suscipit ac,
-        rhoncus sit amet est. Curabitur aliquet dui arcu, eget ullamcorper metus
-        pulvinar quis. Morbi eu dolor risus. Proin sodales velit ut eros
-        condimentum efficitur.
+        Somos un grupo de desarrolladores capacitándonos en el Programa de
+        Inserción Laboral en Nuevas Tecnologías. Nuestro objetivo es que 
+        a través de la enseñanza del ISPC, incluyendo las prácticas laborales
+        de las empresas, logremos conseguir nuestro primer empleo en IT 
+        y a su vez poder seguir adquiriendo conocimientos.
       </p>
     </div>
   </div>
