Lazy load, pagina inicio wallet lista y modulos de servicios creados

--- a/src/app/wallet/sidebar/sidebar.component.html
+++ b/src/app/wallet/sidebar/sidebar.component.html
@@ -1,36 +1,112 @@
-<mat-drawer-container class="sidebar">
+<mat-drawer-container class="sidebar" fullscreen>
   <!-- SIDEBAR IZQUIERDA -->
   <mat-drawer mode="side" opened class="sidebar-izq">
 
-    <h4>PIL MONEY</h4>
-    <mat-button-toggle-group name="fontStyle" aria-label="Font Style" vertical class="list-button">
-      <mat-button-toggle value="bold">
-        <mat-icon>account_circle</mat-icon>
-        Cuenta
-      </mat-button-toggle>
-      <mat-button-toggle value="italic"><mat-icon>payments</mat-icon>
-        Ingresar y Retirar</mat-button-toggle>
-      <mat-button-toggle value="underline"><mat-icon>multiple_stop</mat-icon>
-        Transferencias</mat-button-toggle>
-      <mat-button-toggle value="underline"><mat-icon>miscellaneous_services</mat-icon>
-        Servicios</mat-button-toggle>
-      <mat-button-toggle value="underline"><mat-icon>logout</mat-icon>
-        Cerrar Sesión</mat-button-toggle>
-    </mat-button-toggle-group>
+    <span class="titulo-pil justify-content-between px-4 py-2"  routerLink="/wallet/inicio">
+      <h5 class="mt-2">PIL MONEY</h5>
+      <i class="fas fa-money-check-alt fa-2x"></i>
+    </span>
+
+    <div class="container-fluid ">
+
+      <span class="titulo"><mat-icon>miscellaneous_services</mat-icon><h6>Servicios</h6></span>
+      <section class="texto">
+
+        <mat-button-toggle-group name="servicios" aria-label="Servicios" vertical class="list-button" role="group">
+
+          <mat-button-toggle value="bold" routerLink="/wallet/inicio">
+            <mat-icon>account_balance_wallet</mat-icon>
+              Mi cuenta
+          </mat-button-toggle>
+          <mat-button-toggle value="underline" routerLink="/wallet/ingresaryretirar">
+              <mat-icon>payments</mat-icon>
+              Ingresar y Retirar
+            </mat-button-toggle>
+
+            <mat-button-toggle value="underline" routerLink="/wallet/transferencias">
+              <mat-icon>multiple_stop</mat-icon>
+              Transferencias
+            </mat-button-toggle>
+
+            <mat-button-toggle value="italic" routerLink="/wallet/pagos">
+              <mat-icon>paid</mat-icon>
+              Pagos y Servicios
+            </mat-button-toggle>
+
+            <mat-button-toggle value="underline" routerLink='/wallet/inversiones'>
+              <mat-icon>trending_up</mat-icon>
+              Inversiones
+            </mat-button-toggle>
+
+            <mat-button-toggle value="underline" routerLink='/wallet/compra'>
+              <mat-icon>local_atm</mat-icon>
+              Compra y Venta
+            </mat-button-toggle>
+
+            <mat-button-toggle value="underline" routerLink='/wallet/misdatos'>
+              <mat-icon>account_circle</mat-icon>
+              Mis Datos
+            </mat-button-toggle>
+
+        </mat-button-toggle-group>
+      </section>
+
+
+      <span class="titulo"><mat-icon>help_outline</mat-icon><h6>Ayuda</h6></span>
+      <section class="texto">
+
+        <mat-button-toggle-group name="servicios" aria-label="Servicios" vertical class="list-button" role="group">
+
+            <mat-button-toggle value="bold">
+              <mat-icon>question_answer</mat-icon>
+              Preguntas
+            </mat-button-toggle>
+
+            <mat-button-toggle value="underline">
+              <mat-icon>contact_support</mat-icon>
+              Contactos
+            </mat-button-toggle>
+
+            <mat-button-toggle value="italic">
+              <mat-icon>settings_suggest</mat-icon>
+              Sugerencias
+            </mat-button-toggle>
+
+        </mat-button-toggle-group>
+      </section>
+      <div class="row mt-4 text-center">
+        <div class="col">
+          <button mat-raised-button color="warn"><mat-icon>logout</mat-icon>Cerrar Sesión</button>
+      </div>
+    </div>
+    </div>
   </mat-drawer>
 
   <!-- SIDEBAR MAIN CONTENT -->
-  <mat-drawer-content class="sidebar-main">
-    <h2>Hola desde la Pagina de la Billetera Digital</h2>
-    <mat-card>
-      <mat-card-title>Mi Saldo</mat-card-title>
-      <mat-card-content>{{50000 | currency}}</mat-card-content>
-      <mat-card-actions>Retirar</mat-card-actions>
-      <mat-card-actions>Depositar</mat-card-actions>
+  <mat-drawer-content class="sidebar-main" fxLayout="column" fxLayoutGap="50px"  fxLayoutAlign="center strech">
+    <mat-card class='text-center mx-5 texto-violeta'>
+      <mat-card-title>¡Hola “usuario”, estas en tu cuenta!</mat-card-title>
+      <mat-card-content><img mat-card-lg-image [src]="imgMoney"></mat-card-content>
     </mat-card>
 
+    <mat-card class='mx-5 texto-violeta'>
+      <mat-card-title class="text-center">Cuenta - 12345678</mat-card-title>
+      <mat-card-content>
+         <div class="row">
+          <div class="col-sm-5">
+            <h6>Caja de ahorro en pesos</h6>
+            <h6>CVU - 12345678</h6>
+            <h6>Alias - mono.patin.pato</h6>
+          </div>
+          <div class="col-sm-7 text-center">
+              <h6>Saldo Total</h6>
+              <h5>{{50000 | currency }}</h5>
+              <button mat-raised-button color="primary">Ver mis movimientos</button>
+          </div>
+        </div>
+      </mat-card-content>
 
+    </mat-card>
   </mat-drawer-content>
-
 
 </mat-drawer-container>
