--- a/src/app/wallet/sidebar/sidebar.component.css
+++ b/src/app/wallet/sidebar/sidebar.component.css
@@ -1,4 +1,4 @@
-.sidebar{
+ .sidebar{
   width: 100%;
   height: 100%;
   border: 1px solid #555;
@@ -7,13 +7,50 @@
 .sidebar-izq{
   background-color: #5e35b1;
   width: 20%;
+  color: var(--blanco);
 }
 
 .sidebar-main{
   padding: 5px;
-  background-color: #e8eaf6;
+  background-color: var(--blanco);
+}
+.titulo{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 10px auto;
+  font-size: 13px;
 }
 
-mat-button-toggle{
-  background-color: #e8eaf6;
+
+.titulo-pil{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 5px ;
+  margin-bottom: 10px !important;
+  background-color: var(--violeta-claro);
+}
+
+.texto{
+  display: flex;
+  justify-content: space-around;
+  border-radius: 15px;
+  font-size: 12px;
+}
+
+.texto-violeta{
+  color: #5e35b1;
+}
+
+:host mat-button-toggle-group{
+  border-radius: 15px;
+  border: 5px inset rgba(0, 0, 0, 0.4);
+}
+
+:host mat-button-toggle{
+  background-color: var(--blanco);
+  text-align: left !important;
+  padding: 0px;
+  max-height: 40px;
 }
