--- a/src/app/wallet/wallet-page/wallet-page.component.html
+++ b/src/app/wallet/wallet-page/wallet-page.component.html
@@ -1,10 +1,5 @@
 <!-- <app-header-wallet [templateTres]="headerComponentWallet"></app-header-wallet> -->
 
 
+<router-outlet></router-outlet>
 
-<app-sidebar></app-sidebar>
-<ng-template #headerComponentWallet>
-    <a appHeader (click)="redirectToWallet()" class="logo"
-      >PIL MONEY<img appLogo src="/assets/imagenes/money-check-alt-solid.svg"
-    /></a>
-</ng-template>
