--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,6 +1,6 @@
-<mat-drawer-container class="sidebar" fullscreen>
+
   <!-- SIDEBAR IZQUIERDA -->
-  <mat-drawer mode="side" opened class="sidebar-izq">
+
 
     <span class="titulo-pil justify-content-between px-4 py-2"  routerLink="/wallet/inicio">
       <h5 class="mt-2">PIL MONEY</h5>
@@ -14,36 +14,36 @@
 
         <mat-button-toggle-group name="servicios" aria-label="Servicios" vertical class="list-button" role="group">
 
-          <mat-button-toggle value="bold" routerLink="/wallet/inicio">
+          <mat-button-toggle value="bold" routerLink="/wallet/inicio" routerLinkActive='./wallet/inicio'>
             <mat-icon>account_balance_wallet</mat-icon>
               Mi cuenta
           </mat-button-toggle>
-          <mat-button-toggle value="underline" routerLink="/wallet/ingresaryretirar">
+          <mat-button-toggle value="underline" routerLink="./wallet/ingresaryretirar">
               <mat-icon>payments</mat-icon>
               Ingresar y Retirar
             </mat-button-toggle>
 
-            <mat-button-toggle value="underline" routerLink="/wallet/transferencias">
+            <mat-button-toggle value="underline" routerLink="./wallet/transferencias">
               <mat-icon>multiple_stop</mat-icon>
               Transferencias
             </mat-button-toggle>
 
-            <mat-button-toggle value="italic" routerLink="/wallet/pagos">
+            <mat-button-toggle value="italic" routerLink="./wallet/pagos">
               <mat-icon>paid</mat-icon>
               Pagos y Servicios
             </mat-button-toggle>
 
-            <mat-button-toggle value="underline" routerLink='/wallet/inversiones'>
+            <mat-button-toggle value="underline" routerLink='./wallet/inversiones'>
               <mat-icon>trending_up</mat-icon>
               Inversiones
             </mat-button-toggle>
 
-            <mat-button-toggle value="underline" routerLink='/wallet/compra'>
+            <mat-button-toggle value="underline" routerLink='./wallet/compra'>
               <mat-icon>local_atm</mat-icon>
               Compra y Venta
             </mat-button-toggle>
 
-            <mat-button-toggle value="underline" routerLink='/wallet/misdatos'>
+            <mat-button-toggle value="underline" routerLink='./wallet/misdatos'>
               <mat-icon>account_circle</mat-icon>
               Mis Datos
             </mat-button-toggle>
@@ -80,33 +80,3 @@
       </div>
     </div>
     </div>
-  </mat-drawer>
-
-  <!-- SIDEBAR MAIN CONTENT -->
-  <mat-drawer-content class="sidebar-main" fxLayout="column" fxLayoutGap="50px"  fxLayoutAlign="center strech">
-    <mat-card class='text-center mx-5 texto-violeta'>
-      <mat-card-title>¡Hola “usuario”, estas en tu cuenta!</mat-card-title>
-      <mat-card-content><img mat-card-lg-image [src]="imgMoney"></mat-card-content>
-    </mat-card>
-
-    <mat-card class='mx-5 texto-violeta'>
-      <mat-card-title class="text-center">Cuenta - 12345678</mat-card-title>
-      <mat-card-content>
-         <div class="row">
-          <div class="col-sm-5">
-            <h6>Caja de ahorro en pesos</h6>
-            <h6>CVU - 12345678</h6>
-            <h6>Alias - mono.patin.pato</h6>
-          </div>
-          <div class="col-sm-7 text-center">
-              <h6>Saldo Total</h6>
-              <h5>{{50000 | currency }}</h5>
-              <button mat-raised-button color="primary">Ver mis movimientos</button>
-          </div>
-        </div>
-      </mat-card-content>
-
-    </mat-card>
-  </mat-drawer-content>
-
-</mat-drawer-container>
