--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -4,8 +4,8 @@
   class="titulo-pil justify-content-between px-4 py-2"
   routerLink="/wallet/inicio"
 >
-  <h5 class="mt-2">PIL MONEY</h5>
-  <i class="fas fa-money-check-alt fa-2x"></i>
+  <h5 class="mt-2 titulo-money">PIL MONEY</h5>
+  <img [src]="logoPil" class= "mat-card-image logopil" >
 </span>
 
 <div class="container-fluid">
