--- a/src/app/wallet/pages/inicio/inicio.component.css
+++ b/src/app/wallet/pages/inicio/inicio.component.css
@@ -1,4 +1,84 @@
 
+  .principio{
+  margin-top: 50px;
+  margin-bottom: 10px;
+  margin-left: 50px;
+  font-size: 35px;
+  color: #5e35b1;
+  }
+
+  .cuenta{
+    width: 140px;
+    height: 40px;
+    background-color: white;
+    margin-left: 800px;
+    margin-bottom: 20px;
+    margin-top: -60px;
+    color: #5e35b1;
+    padding-top: 8px;
+    padding-left: 7px;
+    border-radius: 4px;
+    
+  }
+
+  .v1 {
+    border-left: 2px solid #5e35b1;
+    height: 40px;
+    margin-left: 900px;
+    position: relative;
+    bottom: 60px;
+  }
+
+ .arrow-up{
+   width: 0px;
+   height: 0px;
+   border-left: 10px solid transparent  ;
+   border-right: 10px solid transparent  ;
+   border-top: 10px solid #5e35b1;
+   position: relative;
+   bottom: 83px;
+   left: 911px;
+    }
+
+.bienvenidos {
+  font-size: 25px;
+  color: white;
+  position:absolute;
+  bottom: 30px;
+  margin-left: 220px;
+  z-index: 1;
+}
+
+
 .texto-violeta{
   color: #5e35b1;
+}
+
+.tamano{
+  width:900px;
+  background-image: cover;
+  height: 300px;
+  overflow:hidden;
+}
+
+.imagen1{
+  border-radius: 4px;
+  opacity: 40%;
+  z-index: -1;
+  margin-bottom: -100px;
+  }
+
+.logopil{
+  height: 180px;
+  margin-left: -100px;
+  top:30px;
+  width: auto;
+  position: absolute;
+  z-index: 1;
+ 
+}
+
+.dosImg{
+ margin-top: -80px;
+ margin-left: -30px;
 }
