Mejore la posicion de los iconos de la pagina sugerencias

--- a/src/app/wallet/pages/sugerencias/sugerencias.component.css
+++ b/src/app/wallet/pages/sugerencias/sugerencias.component.css
@@ -1,16 +1,20 @@
-.sugerencias{
+.sugerencias {
   text-align: center;
   color: var(--violeta);
   font-weight: 600;
   margin-bottom: 150px;
 }
 
-h4{
+h4 {
   color: var(--violeta);
   font-weight: 600;
   position: relative;
   bottom: 100px;
   padding-top: 100px;
   padding-left: 40px;
+}
 
+mat-icon {
+  position: relative;
+  top: 3px;
 }
