--- a/src/app/wallet/pages/inicio/inicio.component.html
+++ b/src/app/wallet/pages/inicio/inicio.component.html
@@ -1,52 +1,34 @@
-<div class="principio">
- PIL MONEY</div>
+<div class="principio">PIL MONEY</div>
 
- <div class="cuenta">
-   Cuenta MN
- </div>
- 
- <div class="v1"></div>
- <div class="arrow-up"></div>
+<div class="cuenta">Cuenta MN</div>
 
-<mat-card class='text-center mx-5 mb-5 texto-violeta tamano'>
-<h4 class="bienvenidos"> ¡Hola “usuario”, estas en tu cuenta!
-</h4>
-    <mat-card-content class="dosImg">
-      <img [src]="logoPil" class= "mat-card-image logopil" >
+<div class="v1"></div>
+<div class="arrow-up"></div>
+
+<mat-card class="text-center mx-5 mb-5 texto-violeta tamano">
+  <h4 class="bienvenidos">¡Hola “usuario”, estas en tu cuenta!</h4>
+  <mat-card-content class="dosImg">
+    <img [src]="logoPil" class="mat-card-image logopil" />
     <div class="contienepag">
-       <img [src]="imgMoney" class= "mat-card-image imagen1" >
+      <img [src]="imgMoney" class="mat-card-image imagen1" />
     </div>
-    </mat-card-content>
-  </mat-card>
+  </mat-card-content>
+</mat-card>
 
-<mat-card class='mx-5 texto-violeta'>
+<mat-card class="mx-5 texto-violeta">
   <mat-card-title class="text-center">Cuenta - 12345678</mat-card-title>
   <mat-card-content>
-     <div class="row">
+    <div class="row">
       <div class="col-sm-5">
         <h6>Caja de ahorro en pesos</h6>
         <h6>CVU - 12345678</h6>
         <h6>Alias - mono.patin.pato</h6>
       </div>
       <div class="col-sm-7 text-center">
-          <h6>Saldo Total</h6>
-          <h5>{{50000 | currency }}</h5>
-          <button mat-raised-button color="primary">Ver mis movimientos</button>
+        <h6>Saldo Total</h6>
+        <h5>{{ 50000 | currency }}</h5>
+        <button mat-raised-button color="primary">Ver mis movimientos</button>
       </div>
     </div>
   </mat-card-content>
 </mat-card>
-
-
-<!--
-  
-.bienvenidos{
-  color: white;
-  align: center;
-  position: absolute;
-  margin-left: 25%;
-  font-size: 2rem;
-  top: 70%;
- 
-}
--->
