Agregado componente y ruta de contactos

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -81,7 +81,7 @@
         Preguntas
       </mat-button-toggle>
 
-      <mat-button-toggle value="underline">
+      <mat-button-toggle value="underline" routerLink="./wallet/contactos">
         <mat-icon>contact_support</mat-icon>
         Contactos
       </mat-button-toggle>
