--- a/src/app/wallet/pages/inicio/inicio.component.html
+++ b/src/app/wallet/pages/inicio/inicio.component.html
@@ -1,5 +1,5 @@
 <mat-card class='text-center mx-5 mb-5 texto-violeta'>
-  <mat-card-title>¡Hola “usuario”, estas en tu cuenta!</mat-card-title>
+  <mat-card-title>¡Hola “usuario”, estás en tu cuenta!</mat-card-title>
   <mat-card-content><img mat-card-lg-image [src]="imgMoney"></mat-card-content>
 </mat-card>
 
