--- a/src/app/wallet/pages/inversiones/inversiones.component.html
+++ b/src/app/wallet/pages/inversiones/inversiones.component.html
@@ -28,7 +28,6 @@
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
-
-    <button mat-flat-button>Realizá una inversión +</button>
+    <button mat-flat-button routerLink='/wallet/invertir'>Realizá una inversión +</button>
 
 </div>
