--- a/src/app/wallet/pages/invertir/invertir.component.html
+++ b/src/app/wallet/pages/invertir/invertir.component.html
@@ -4,18 +4,39 @@
             ¿Qué tipo de inversión querés realizar?
         </div>
     </div>
-    <div class="row">
-
-        <div class="col-sm-3 offset-2">  
+    <div class="row align-items-center">
+        <div class="col-sm-5" >  
             <section class="example-section">
                 <mat-radio-group [(ngModel)]="labelPosition">
-                  <p><mat-radio-button class="example-margin" value="plazoFijoARS">Plazo fijo (ARS)</mat-radio-button></p>
-                  <p><mat-radio-button class="example-margin" value="plazoFijoUSD">Plazo fijo (USD)</mat-radio-button></p>
-                  <p><mat-radio-button class="example-margin" value="FCIARS">FCI (ARS)</mat-radio-button></p>
-                  <p><mat-radio-button class="example-margin" value="FCIUSD">FCI (USD)</mat-radio-button></p>
+                  <p><mat-radio-button class="example-margin margin-extra" value="plazoFijoARS">Plazo fijo (ARS)</mat-radio-button></p>
+                  <p><mat-radio-button class="example-margin margin-extra" value="plazoFijoUSD">Plazo fijo (USD)</mat-radio-button></p>
+                  <p><mat-radio-button class="example-margin margin-extra" value="FCIARS">FCI (ARS)</mat-radio-button></p>
+                  <p><mat-radio-button class="example-margin margin-extra" value="FCIUSD">FCI (USD)</mat-radio-button></p>
                 </mat-radio-group>
             </section>
         </div>
-        <div class="col-sm-7">a</div>
+        <div class="col-sm-6">
+            <p>Ingresá el monto</p>
+            <mat-form-field appearance="fill" floatLabel="always">
+                <input matInput type="number" class="example-right-align" placeholder="0">
+                <span matPrefix>$&nbsp;</span>
+                <span matSuffix>.00</span>
+            </mat-form-field>
+            <p>Seleccioná el plazo</p>
+            <mat-form-field appearance="fill">
+                <mat-select [(value)]="selected">
+                  <mat-option value="30dias">A 30 días (+20%)</mat-option>
+                  <mat-option value="anual">Anual (+50%)</mat-option>
+                </mat-select>
+              </mat-form-field>
+            <p>¿Renovación automática?</p>
+            <section class="example-section">
+                <mat-radio-group [(ngModel)]="labelRenovacion" class="row justify-content-between">
+                  <mat-radio-button class="col-3 example-margin" value="si">Si</mat-radio-button>
+                  <mat-radio-button class="col-3 example-margin" style="margin-right: 30px;" value="no">No</mat-radio-button>
+                </mat-radio-group>
+            </section>
+            <button mat-flat-button>Realizar</button>
+        </div>
     </div>
 </div>
