añadi el componente preguntas, agregue algunos dropdowns con las secciones y un par de preguntas

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -76,7 +76,7 @@
       class="list-button"
       role="group"
     >
-      <mat-button-toggle value="bold">
+      <mat-button-toggle value="bold" routerLink="./wallet/preguntas">
         <mat-icon>question_answer</mat-icon>
         Preguntas
       </mat-button-toggle>
