--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -5,12 +5,12 @@
   routerLink="/wallet/inicio"
 >
   <h5 class="mt-2 titulo-money">PIL MONEY</h5>
-  <img [src]="logoPil" class= "mat-card-image logopil" >
+  <img [src]="logoPil" class="mat-card-image logopil" />
 </span>
 
-<div class="container-fluid">
+<div class="container-fluid side-bar">
   <span class="titulo"
-    ><mat-icon>miscellaneous_services</mat-icon>
+    ><mat-icon class="icon">miscellaneous_services</mat-icon>
     <h6>Servicios</h6></span
   >
   <section class="texto">
@@ -65,7 +65,7 @@
   </section>
 
   <span class="titulo"
-    ><mat-icon>help_outline</mat-icon>
+    ><mat-icon class="icon">help_outline</mat-icon>
     <h6>Ayuda</h6></span
   >
   <section class="texto">
